ajout du model disponibilites
